Rebrand to Generic Wholesale - Update contact numbers and remove welcome bonus

--- a/.gitignore
+++ b/.gitignore
@@ -32,11 +32,6 @@ dist-ssr
 *.xlsx
 
 # Documentation files (keep local only)
-START_HERE.md
-QUICK_DEPLOY_CHECKLIST.md
-DEPLOYMENT_GUIDE.md
-DEPLOYMENT_TIMELINE.md
-HOSTER_PK_DNS_GUIDE.md
-ENV_VARIABLES_TEMPLATE.md
-README_DEPLOYMENT.md
-DEPLOYMENT_SUMMARY.txt
+*.md
+*.txt
+!README.md
