--- a/server/.env.example
+++ b/server/.env.example
@@ -1,5 +1,5 @@
 PORT=5000
-MONGODB_URI=mongodb://localhost:27017/amazon-gymkhana
+MONGODB_URI=mongodb://localhost:27017/generic-wholesale
 JWT_SECRET=your_jwt_secret_key_here_change_in_production
 NODE_ENV=development
 
@@ -28,7 +28,7 @@ EMAIL_PORT=587
 EMAIL_SECURE=false
 EMAIL_USER=your_email@gmail.com
 EMAIL_PASS=your_gmail_app_password
-EMAIL_FROM_NAME=Amazon Gymkhana
+EMAIL_FROM_NAME=Generic Wholesale
 
 # Frontend URL (for password reset links)
 FRONTEND_URL=http://localhost:5173
