--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "amazon-gymkhana-backend",
+  "name": "generic-wholesale-backend",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
