--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,6 @@
 VITE_API_URL=http://localhost:5000/api
 
 # For production, use your Render backend URL:
-# VITE_API_URL=https://amazon-gymkhana-backend.onrender.com/api
+# VITE_API_URL=https://generic-wholesale-backend.onrender.com/api
 # Or custom domain:
-# VITE_API_URL=https://api.yourdomain.com/api
+# VITE_API_URL=https://api.genericwholesale.pk/api
