--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "npm run build"
+    "deploy": "npm run build",
+    "start:dev": "node start-development.js",
+    "test:api": "node server/test-email-simple.js"
   },
   "dependencies": {
     "react": "^19.2.0",
